Version update, clean up, code modernization